# lightgbm-transform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSION.txt
.ci/: setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python_package.yml  test.yml
azureml/: README.md  requirements.txt  run.py
azureml/components/evaluate/: evaluate.py  evaluate.yaml
azureml/components/infer/: infer.py  infer.yaml
azureml/components/train/: train.py  train.yaml
azureml/data/: parser_config_file.json
docs/: Customized-Parser-Tutorial.rst  Development-Setup-Guide.rst  FreeForm2-Language.rst  Installation-Guide.rst  Transform-Tutorial.rst
examples/: freeform2_parser.cpp
scripts/: MANIFEST.in  README.rst  generate_parser_config.py  load_precompiled_libs.py  publish_python_package.sh  setup.py
src/: CMakeLists.txt
src/DynamicRank.FreeForm.Library/test/: CMakeLists.txt  FreeFormLibTest.cpp  FreeFormLibTestSet.h
src/NeuralTree.Library/inc/: common.h  log.h
src/NeuralTree.Library/src/: CMakeLists.txt  FeaSpecConfig.cpp  NeuralInput.cpp  NeuralInputFactory.cpp
src/NeuralTreeEvaluator.Library/src/: InputExtractor.cpp
src/NeuralTreeEvaluator.Library/test/: CMakeLists.txt  NeuralTreeEvaluatorLibTest.cpp
src/NeuralTreeEvaluator.Library/test/data/: TrainInputIni
src/TransformProcessor/: CMakeLists.txt
src/TransformProcessor/src/: CMakeLists.txt  IniFileParserInterface.cpp  TransformProcessor.cpp
src/TransformProcessor/test/: CMakeLists.txt  Tests.cpp
tests/data/transform_rank_data/: freeform_config.ini  freeform_config.json
tests/data/transform_simple_data/: freeform_config.ini  freeform_config.json  input.tsv
tests/python_package_test/: test_transform.py
